--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  background: url(Wall8.jpg) no-repeat;
+  background: url(bg1.jpg) no-repeat;
   background-size: cover;
 }
 .box{
