--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -4,6 +4,19 @@ body{
   background: url(bg1.jpg) no-repeat;
   background-size: cover;
 }
+aside {
+    width: 40%;
+    padding-left: .5rem;
+    margin-left: .5rem;
+    float: right;
+    box-shadow: inset 5px 0 5px -5px #29627e;
+    font-style: italic;
+    color: #29627e;
+}
+
+aside > p {
+    margin: .5rem;
+}
 .box{
   width: 1000px;
   background: rgba(0, 0, 0, 0.4);
