--- a/styles/index.css
+++ b/styles/index.css
@@ -268,7 +268,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../assets/img/profile_bg1.jpg") top center;
+  background: url("../assets/img/profile.jpg") top center;
   background-size: cover;
 }
 
@@ -987,4 +987,48 @@ section {
     width: auto;
     padding-right: 20px 15px;
   }
+}
+
+section ul {
+  list-style: none;
+  padding-left: 20px;
+}
+
+section ul li {
+  margin: 10px 0;
+  position: relative;
+  padding-left: 20px;
+  font-size: 1.05em;
+  color: #444;
+  line-height: 1.5;
+}
+
+section ul li::before {
+  content: '\f00c'; /* Font Awesome checkmark */
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  position: absolute;
+  left: 0;
+  top: 2px;
+  color: #1a73e8;
+  font-size: 0.9em;
+}
+
+/* Adding subtle hover effect */
+section ul li:hover {
+  background-color: #e8f0fe;
+  border-radius: 5px;
+  padding-left: 25px;
+}
+
+a {
+  color: #1a73e8;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease-in-out;
+}
+
+a:hover {
+  color: #d93025;
+  text-decoration: underline;
 }
