--- a/styles/style.css
+++ b/styles/style.css
@@ -50,3 +50,21 @@ ul{
 .box li a:hover{
   color: #b9b9b9;
 }
+
+.circle-div {
+  width: 200px; /* Adjust the size as needed */
+  height: 200px; /* Ensure the same value for width and height */
+  border-radius: 50%;
+  border: 2px solid #fff;
+  overflow: hidden; /* Hide the overflow to keep the circle shape */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Ensure the image fits inside the circle */
+.circle-div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
